<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_menu_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/bottom_menu_calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_task"
        android:title="@string/bottom_menu_task"
        android:icon="@drawable/ic_assignment_black_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
</menu>