<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:id="@+id/item_revision">

    <TextView
        android:id="@+id/tv_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:tools="Subject"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_date_due_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/on_the_label"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_subject"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject" />

    <TextView
        android:id="@+id/tv_date_due"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_due_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_date_due_label"
        app:layout_constraintTop_toTopOf="@+id/tv_date_due_label"
        tools:text="19th of September"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/but_details"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/details"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_due_label"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tv_revision_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/revision"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_subject"
        app:layout_constraintTop_toTopOf="@+id/tv_subject" />

    <TextView
        android:id="@+id/tv_revision_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revision_time"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_date_due_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_due_label" />

    <TextView
        android:id="@+id/tv_revision_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_revision_time_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_revision_time_label"
        app:layout_constraintTop_toTopOf="@+id/tv_revision_time_label"
        tools:text="45 min" />

    <TextView
        android:id="@+id/tv_time_at_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/at_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_due_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_date_due"
        app:layout_constraintTop_toTopOf="@+id/tv_date_due_label"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/tv_time_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time_at_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_time_at_label"
        app:layout_constraintTop_toTopOf="@+id/tv_time_at_label"
        tools:text="16:45" />

    <View
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_details" />

</android.support.constraint.ConstraintLayout>