<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_assignment">

    <TextView
        android:id="@+id/tv_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Subject"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <ProgressBar
        android:id="@+id/pb_time_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="@+id/but_details"
        app:layout_constraintLeft_toLeftOf="@+id/tv_date_due_label"
        app:layout_constraintRight_toLeftOf="@+id/but_details"
        app:layout_constraintTop_toTopOf="@+id/tv_subject"
        app:layout_constraintVertical_bias="0.902" />

    <TextView
        android:id="@+id/tv_date_due_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date_due_label"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_subject"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject" />

    <TextView
        android:id="@+id/tv_date_due"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_due_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_date_due_label"
        app:layout_constraintTop_toTopOf="@+id/tv_date_due_label"
        tools:text="19th of September"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/but_details"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/details"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_due_label"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tv_subject_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/assignment"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_subject"
        app:layout_constraintTop_toTopOf="@+id/tv_subject" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_details" />

</android.support.constraint.ConstraintLayout>